--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -21,8 +21,14 @@ jobs:
           GITLEAKS_REPORT_FORMAT: sarif
           GITLEAKS_REPORT_PATH: gitleaks.sarif
 
+      - name: Ensure SARIF report exists
+        run: |
+          if [ ! -f gitleaks.sarif ]; then
+            echo '{"version":"2.1.0","runs":[]}' > gitleaks.sarif
+          fi
+
       - name: Upload SARIF
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: gitleaks.sarif
 
