--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -24,7 +24,23 @@ jobs:
       - name: Ensure SARIF report exists
         run: |
           if [ ! -f gitleaks.sarif ]; then
-            echo '{"version":"2.1.0","runs":[]}' > gitleaks.sarif
+            cat > gitleaks.sarif << 'EOF'
+            {
+              "version": "2.1.0",
+              "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
+              "runs": [
+                {
+                  "tool": {
+                    "driver": {
+                      "name": "gitleaks",
+                      "informationUri": "https://github.com/gitleaks/gitleaks"
+                    }
+                  },
+                  "results": []
+                }
+              ]
+            }
+            EOF
           fi
 
       - name: Upload SARIF
