--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -19,37 +19,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_REPORT_FORMAT: sarif
-          GITLEAKS_REPORT_PATH: gitleaks.sarif
-
-      - name: Ensure SARIF report exists
-        run: |
-          if [ ! -f gitleaks.sarif ]; then
-            cat > gitleaks.sarif << 'EOF'
-            {
-              "version": "2.1.0",
-              "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
-              "runs": [
-                {
-                  "tool": {
-                    "driver": {
-                      "name": "gitleaks",
-                      "informationUri": "https://github.com/gitleaks/gitleaks"
-                    }
-                  },
-                  "results": []
-                }
-              ]
-            }
-            EOF
-          fi
+          GITLEAKS_REPORT_PATH: results.sarif
 
       - name: Upload SARIF
+        continue-on-error: true
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: gitleaks.sarif
+          sarif_file: results.sarif
 
       - name: Upload report artifact
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-sarif
-          path: gitleaks.sarif
+          path: results.sarif
